--- a/server/balancer/leastcon.conf
+++ b/server/balancer/leastcon.conf
@@ -1,7 +1,6 @@
-# /etc/nginx/nginx.conf or /etc/nginx/conf.d/load_balancer.conf
 
-http {
     upstream backend {
+    	least_conn;
         server 127.0.0.1:3210;   # Backend service on port 3210
         server 127.0.0.1:3211;   # Backend service on port 3211
         server 127.0.0.1:3212;   # Backend service on port 3212
@@ -24,5 +23,3 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-}
-
