--- a/server/balancer/leastcon.conf
+++ b/server/balancer/leastcon.conf
@@ -2,10 +2,10 @@
     upstream backend {
     	least_conn;
         server 172.17.0.1:3210;   # Backend service on port 3210
-#        server 172.17.0.1:3211;   # Backend service on port 3211
-#        server 172.17.0.1:3212;   # Backend service on port 3212
-#        server 172.17.0.1:3213;   # Backend service on port 3213
-#        server 172.17.0.1:3214;   # Backend service on port 3214
+        server 172.17.0.1:3211;   # Backend service on port 3211
+        server 172.17.0.1:3212;   # Backend service on port 3212
+        server 172.17.0.1:3213;   # Backend service on port 3213
+        server 172.17.0.1:3214;   # Backend service on port 3214
         # Optional:
         # server 127.0.0.1:8080 weight=2;
         # server 127.0.0.1:8081 weight=1;
